# duckdb-storagebox

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  devenv.nix  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: crypto.cpp  hash_functions.cpp  http_state.cpp  httpfs.cpp  httpfs_curl_client.cpp  ssh_client.cpp  storagebox_extension.cpp  storagebox_filesystem.cpp  storagebox_secrets.cpp  storagebox_ssh_integration.cpp
src/include/: crypto.hpp  hash_functions.hpp  http_metadata_cache.hpp  http_state.hpp  httpfs.hpp  httpfs_client.hpp  httpfs_curl_client.hpp  ssh_client.hpp  ssh_helpers.hpp  storagebox_extension.hpp  storagebox_filesystem.hpp  storagebox_secrets.hpp
